# vneio

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CODING_GUIDELINES.md  README.md  codecov.yml
.copilot/: coding-guidelines.md
.github/workflows/: ci.yml
config/: config.h.in
include/vertexnova/io/: asset_io.h  asset_loader.h  load_request.h  vneio.h
include/vertexnova/io/common/: binary_io.h  status.h
include/vertexnova/io/dicom/: dicom_loader.h  dicom_loader_registry.h  dicom_series.h
include/vertexnova/io/image/: image.h  image_loader.h  mhd_loader.h  nrrd_loader.h  stb_image_loader.h  volume.h  volume_exporter.h  volume_loader.h
include/vertexnova/io/mesh/: assimp_loader.h  mesh.h  mesh_exporter.h  mesh_loader.h  mesh_loader_registry.h
include/vertexnova/io/utils/: path_utils.h
scripts/: README.md  build_ios.sh  build_linux.sh  build_macos.sh  build_web.sh  build_windows.py
src/vertexnova/io/: asset_io.cpp
src/vertexnova/io/dicom/: dicom_loader_registry.cpp
src/vertexnova/io/image/: image.cpp  mhd_loader.cpp  nrrd_loader.cpp  stb_image_loader.cpp  volume_exporter_mhd.cpp  volume_exporter_nrrd.cpp
src/vertexnova/io/mesh/: assimp_loader.cpp  mesh_exporter_obj.cpp  mesh_loader_registry.cpp
src/vertexnova/io/utils/: path_utils.cpp
testdata/meshes/: minimal.stl
testdata/volumes/: an-hist.nrrd  small3d.nrrd
tests/: CMakeLists.txt  asset_io_test.cpp  main.cpp
tests/image/: image_test.cpp  volume_test.cpp
tests/mesh/: mesh_loader_test.cpp
